--- a/message-properties-converter/src/main/resources/templates/message/properties/list.html
+++ b/message-properties-converter/src/main/resources/templates/message/properties/list.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../../../css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            max-width: 560px;
+        }
+        .field-error {
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
 <div class="container" style="max-width: 1600px">
@@ -12,6 +20,9 @@
     </div>
 
     <form th:action="@{/message/properties/en}" th:method="put" th:object="${messageProperties}">
+        <script th:if="${conversionError}">
+            top.alert("[[${conversionError}]]")
+        </script>
         <div class="row">
             <div class="col">
                 <button class="btn btn-primary float-end" type="submit">modify</button>
@@ -21,19 +32,24 @@
             <table class="table">
                 <thead>
                 <tr>
+                    <th>index</th>
                     <th>key</th>
                     <th>ko value</th>
                     <th>en value</th>
+                    <th>error message</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="mp : ${messageProperties.messageProperties}">
+                    <td th:text="${mpStat.index}"></td>
                     <td><input type="text" th:value="${messageProperties.messageProperties[__${mpStat.index}__].key}"
                                            th:field="${messageProperties.messageProperties[__${mpStat.index}__].key}" readonly/></td>
                     <td><input type="text" th:value="${messageProperties.messageProperties[__${mpStat.index}__].koValue}"
                                            th:field="${messageProperties.messageProperties[__${mpStat.index}__].koValue}" readonly/></td>
                     <td><input type="text" th:value="${messageProperties.messageProperties[__${mpStat.index}__].enValue}"
                                            th:field="${messageProperties.messageProperties[__${mpStat.index}__].enValue}"/></td>
+                    <td th:text="${messageProperties.messageProperties[__${mpStat.index}__].errorMessage != null} ?
+                                 ${messageProperties.messageProperties[__${mpStat.index}__].errorMessage.desc}" class="field-error"></td>
                 </tr>
                 </tbody>
             </table>
